# TetoDL

./: .gitignore  =  README.md  install.ps1  install.sh  installer.sh  main.py  pyproject.toml  requirements-dev.txt  requirements-lite.txt  requirements.txt  t.py  teto-dl.sh  tetodl.sh  tetodl.spec
.github/workflows/: ci.yml  test-bin-all.yml  test-bin-linux.yml  test-bin-windows.yml  test-source-linux.yml
aio_downloader/: __init__.py  constants.py
aio_downloader/core/: __init__.py  config.py  history.py
aio_downloader/downloaders/: __init__.py  spotify.py  youtube.py
aio_downloader/media/: __init__.py
aio_downloader/ui/: display.py  menus.py  navigation.py
aio_downloader/utils/: __init__.py  network.py
asset/: teto-1.txt  yuzuha-2.txt
assets/: default.txt  kasane-teto.txt  reze.txt  yuzuha-1.txt
docs/: install.html
plan/: README.md
scripts/: gen_i18n.py  test-linux.sh  test-windows.ps1
teto_dl/: __init__.py  constants.py
teto_dl/core/: __init__.py  cache.py  cli.py  config.py  dependency.py  maintenance.py  registry.py  search.py
teto_dl/downloaders/: __init__.py  spotify.py  youtube.py
teto_dl/locales/: __init__.py  en.json  id.json
teto_dl/media/: __init__.py  scanner.py  thumbnail.py
teto_dl/ui/: __init__.py  analytics.py  components.py  display.py  entry.py  menus.py  navigation.py  settings.py  verifier.py
teto_dl/utils/: __init__.py  colors.py  display.py  file_utils.py  files.py  hooks.py  i18n.py  metadata_fetcher.py  network.py  processing.py  spinner.py  styles.py  wsl_bridge.py
tetodl/: __init__.py  __main__.py  constants.py
tetodl/cli/: dispatch.py  parser.py
tetodl/core/: __init__.py  cache.py  cli.py  config.py  dependency.py  extractor.py  history.py  image_cache.py  maintenance.py  metadata_fetcher.py  models.py  provider.py  registry.py  resolver.py  search.py  step.py  tagger.py
tetodl/daemon/: api.py  discovery.py  display.py  models.py  service.py
tetodl/downloaders/: __init__.py  spotify.py
tetodl/extractors/: __init__.py  search.py  spotify.py  youtube.py
tetodl/locales/: en.json  id.json
tetodl/media/: __init__.py  scanner.py  tagger.py  thumbnail.py
tetodl/pipeline/: __init__.py  handlers.py  pipeline.py
tetodl/tests/: conftest.py  plugin.py
tetodl/ui/: __init__.py  about.py  analytics.py  components.py  navigation.py  provider.py  settings.py  verifier.py
tetodl/utils/: display.py  (+18 more)
(+75 files in other folders)
